[package]
name = "async-dispatch"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.3.9"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
